fix grid gap

--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ h4 {
 .title__card {
   background: #74BDCB;
   color: #fff;
-  padding: 24px 10px;
+  padding: 26px 10px;
   grid-column: span 5;
   text-align: center;
   font: 24px/0.9 "Amatic SC", cursive;
@@ -88,9 +88,9 @@ h4 {
 }
 .bingo-card {
   background: #FFA384;
-  padding: 10px;
+  padding: 8px;
   display: grid;
-  grid-gap: 3px;
+  grid-gap: 2px;
   grid-template-rows: repeat(5, 110px);
   grid-template-columns: repeat(5, 1fr);
   text-transform: uppercase;
